--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <div class="socials">
           <ul>
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true" style="font-size: 30px; color: #ffffff;"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true" style="font-size: 30px; color: #ffffff;"></i></a></li>
+            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true" style="font-size: 30px; color: #ffffff;"></i></a></li>
+            <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true" style="font-size: 30px; color: #ffffff;"></i></a></li>
           </ul>
         </div>
       </header>
@@ -32,14 +32,14 @@
        <h1></h1>
         <p></p>
         <button type="button" href="">get start</button>
-        <a href="#arrow-link"><i class="fa fa-long-arrow-down fa-lg" aria-hidden="true"></i></a>
+        <a href="#arrow-link"><i class="fa fa-angle-down" aria-hidden="true" style="font-size: 80px; color: #ffffff;"></i></a>
       </div>
     </div>
   </div>
   <div id="arrow-link" class="services-container">
     <div class="h-p-group">
-      <h2>Tinyone features</h2>
-      <p>Depending on the needs of your business, we are always ready to offer you the best solution.<br>Our team analyzes the initial data, searches for the new ideas that could be ideally suitable for your business and carries out meticulous tests.</p>
+      <h2>Mozilla Campus Club</h2>
+      <p>Mozilla’s mission is to ensure the Internet is a global public resource, open and accessible to all. A Mozilla university & club is a group of students with a passion for technology who meet regularly to advance this mission by building and innovating on open source projects that keep the web open.</p>
     </div>
     <div class="services-block">
       <div class="services-block-box marg-left">
@@ -74,14 +74,14 @@
       </div>
     </div>
   </div>
-  <div class="pricing-container">
+  <div class="event-container">
     <div class="h-p-group">
-      <h2>Pricing And Free Trial</h2>
+      <h2>Up comming events</h2>
       <p>Three plans are available: two with approachable prices and one free plan.<br>Choose the option that suits you best.</p>
     </div>
     <div class="price-block left-block">
       <img src="http://bit.ly/2B6jXjP" alt="tablet.png">
-      <h3>Basic</h3>
+      <h3>Doodler</h3>
       <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit</p>
       <p>free</p>
       <img src="http://bit.ly/2uhCRRm" alt="line.png">
@@ -90,7 +90,7 @@
     </div>
     <div class="price-block center-block">
       <img src="http://bit.ly/2AWXV2c" alt="laptop.png">
-      <h3>Standard</h3>
+      <h3>Technical Quiz</h3>
       <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit</p>
       <p><i class="fa fa-usd" aria-hidden="true"></i>99</p>
       <img src="http://bit.ly/2uhCRRm" alt="line.png">
@@ -99,7 +99,7 @@
     </div>
     <div class="price-block right-block">
       <img src="http://bit.ly/2kozC6R" alt="desktop.png">
-      <h3>Enterprise</h3>
+      <h3>Reverse Coding</h3>
       <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit</p>
       <p><i class="fa fa-usd" aria-hidden="true"></i>199</p>
       <img src="http://bit.ly/2uhCRRm" alt="line.png">
@@ -404,7 +404,7 @@
     </div>
   </footer>
   <div id="up-btn">
-    <a href="#up"><i class="fa fa-3x fa-chevron-up" aria-hidden="true"></i></a>
+    <a href="#up"><i class="fa fa-3x fa-chevron-up" aria-hidden="true" style="color: #ffffff;"></i></a>
   </div>
 </body>
 
