social media icons added

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="customer-info">
         <img src="http://bit.ly/2itYB4l" alt="customer-image.png">
         <h4>John Doe</h4>
-        <h5>From Wodpress</h5>
+        <h5>President</h5>
       </div>
       <div class="customer-quote">
         
@@ -297,7 +297,7 @@
       </div>
     </div>
   </div>
-  <div class="feedback-container">
+  <!--<div class="feedback-container">
     <div class="h-p-group">
       <h2>Keep in touch with us</h2>
       <p>Available 24/7 via email and phone. Come and visit us in our office from Monday till Friday,<br>9 am - 9 pm</p>
@@ -327,50 +327,27 @@
         <input type="submit" value="Send Message">
       </form>
     </div>
-  </div>
+  </div>-->
   <footer id="footer">
     <div class="footer-container">
-      <div class="footer-form">
-        <h2>Sign up for our newsletter</h2>
-        <p>We send emails with news, articles and information about our promotions.<br>No junk mail, we promise!</p>
-        <form>
-          <input type="email" name="mail" placeholder="Enter your email to update" required>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-
       <div class="block">
-        <div class="footer-contacts">
-          <h5>HALOVIETNAM LTD</h5>
-          <address>66, Dang Van ngu, Dong Da<br> Hanoi, Vietnam</address>
-          <a href="mailto:contact@halovietnam.com">contact@halovietnam.com</a>
-          <a href="tel:+844123456789">+844 1234 56789</a>
-        </div>
         <div class="footer-nav">
-          <ul>
-            <li><a href="#">Examples</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">License</a></li>
-          </ul>
-          <ul>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-          </ul>
-          <ul>
-            <li><a href="#">Download</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Documents</a></li>
-          </ul>
-          <ul>
-            <li><a href="#">Media</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Forums</a></li>
-          </ul>
+           <div class="middle">
+                <a class="btn" href="#">
+                  <i class="fa fa-facebook-f"></i>
+                </a>
+                <a class="btn" href="#">
+                  <i class="fa fa-twitter"></i>
+                </a>
+                <a class="btn" href="#">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+                <a class="btn" href="#">
+                  <i class="fa fa-instagram"></i>
+                </a>
+             </div>
         </div>
-      </div>
-
+    </div>
     </div>
   </footer>
   <div id="up-btn">
